# side-stacker-alpha

./: GameState.py  README.md  game_liklihood.ipynb  game_sim.ipynb  mcts.ipynb  mcts.py  mcts_logic.py  mcts_meta.py  mcts_sim.ipynb  nn.ipynb  notebook.ipynb  pyproject.toml
game/: __init__.py  engine.py  logic.py  sim.py  utils.py
tests/: optimal_test.py  valid_test.py  win_test.py  winning_test.py
