[project]
name = "side-stacker-alpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
